[gd_scene load_steps=3 format=3 uid="uid://bfov35j3gicna"]

[ext_resource type="Script" path="res://nodes/options/Options.gd" id="1_kp4sc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ydxf"]
bg_color = Color(0, 0, 0, 0.862745)

[node name="Options" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2ydxf")
script = ExtResource("1_kp4sc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(760, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.302083
anchor_top = 0.367593
anchor_right = 0.697917
anchor_bottom = 0.632407
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="FullScreen" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "- 全屏模式 -"

[node name="EditMode" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "- 布局模式 -"

[node name="ComponentSetting" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "- 组件设置-"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 33
text = "- 退出TouchWorld -"
